--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/ThemeOverlay.MaterialComponents.ActionBar">
+        android:theme="@style/Theme.MaterialComponents.NoActionBar">
         <activity android:name=".MainActivity"
             android:theme="@style/AppTheme">
             <intent-filter>
