--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Oct 06 13:06:36 IST 2020
-sdk.dir=/home/toor/Android/Sdk
+#Sun May 30 19:02:16 IST 2021
+sdk.dir=C\:\\Users\\User\\AppData\\Local\\Android\\Sdk
